# late-to-class

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  SetupProject.bat
.cache/clangd/index/: main.cpp.CBDAAB7B64A899AE.idx
.github/workflows/: build.yml
src/: main.cpp
src/utils/: timer.cpp  timer.hpp
